--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@angular/platform-browser-dynamic": "~2.4.3",
     "core-js": "2.4.1",
     "d3": "4.4.0",
-    "moment": "2.17.1",
+    "date-fns": "^1.27.0",
     "rxjs": "5.0.1",
     "zone.js": "^0.7.4"
   },
@@ -109,6 +109,7 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "d3": "4.2.2",
+    "date-fns": "^1.27.0",
     "fs-extra": "^2.0.0",
     "gh-pages": "^0.12.0",
     "html-webpack-plugin": "^2.26.0",
@@ -122,7 +123,6 @@
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
-    "moment": "2.14.1",
     "node-sass": "^4.3.0",
     "npm-run-all": "^4.0.1",
     "postcss": "^5.2.10",
