--- a/package.json
+++ b/package.json
@@ -100,8 +100,7 @@
     "@types/jasmine": "^2.5.41",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.7.0",
-    "awesome-typescript-loader": "2.2.4",
-    "chalk": "^1.1.3",
+    "awesome-typescript-loader": "~3.0.0-beta.10",
     "clean-webpack-plugin": "^0.1.15",
     "codelyzer": "0.0.28",
     "copy-webpack-plugin": "^4.0.0",
@@ -109,8 +108,11 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "d3": "4.2.2",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "file-loader": "^0.9.0",
     "fs-extra": "^2.0.0",
     "gh-pages": "^0.12.0",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
     "istanbul-instrumenter-loader": "^1.2.0",
     "jasmine-core": "^2.5.2",
@@ -126,19 +128,21 @@
     "npm-run-all": "^4.0.1",
     "postcss": "^5.2.11",
     "postcss-loader": "^1.2.2",
-    "progress-bar-webpack-plugin": "^1.9.3",
+    "raw-loader": "^0.5.1",
     "replace": "^0.3.0",
     "rimraf": "^2.5.2",
     "rxjs": "^5.0.3",
     "sass-loader": "^4.1.1",
     "source-map-loader": "^0.1.6",
-    "style-loader": "0.13.1",
+    "style-loader": "^0.13.1",
+    "to-string-loader": "^1.1.5",
     "ts-helpers": "1.1.1",
     "tslint": "^4.0.2",
     "tslint-config-swimlane": "^2.0.1",
     "tslint-loader": "^3.3.0",
     "typescript": "~2.0.10",
     "uglify-js": "^2.7.5",
+    "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
     "webpack-merge": "^2.4.0",
