--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "package:ts": "tsc --outDir release",
     "package:aot": "ngc -p tsconfig-aot.json",
     "package:replace-scss": "node ./config/replace-scss.js",
-    "package:minify": "uglifyjs release/index.js --source-map release/index.min.js.map --source-map-url release/index.js.map --compress --mangle --screw-ie8 --output release/index.min.js",
+    "package:minify": "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
     "deploy": "node ./config/deploy.js",
     "profile": "NODE_ENV=production webpack --profile --json > dist/stats.json"
   },
@@ -90,7 +90,7 @@
     "@angular/platform-browser": "^4.3.6",
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/platform-server": "^4.3.6",
-    "@swimlane/ngx-ui": "^14.2.4",
+    "@swimlane/ngx-ui": "^18.0.6",
     "@types/d3-array": "^1.2.1",
     "@types/d3-brush": "1.0.7",
     "@types/d3-color": "^1.0.5",
@@ -107,7 +107,7 @@
     "@types/jasmine": "^2.5.54",
     "@types/node": "^8.0.28",
     "angular2-template-loader": "^0.6.0",
-    "autoprefixer": "^6.7.0",
+    "autoprefixer": "^7.1.4",
     "awesome-typescript-loader": "^3.2.3",
     "clean-webpack-plugin": "^0.1.15",
     "codelyzer": "^3.0.0-beta.4",
@@ -115,16 +115,16 @@
     "core-js": "^2.5.1",
     "cpx": "^1.5.0",
     "cross-env": "^5.0.5",
-    "css-loader": "^0.27.3",
+    "css-loader": "^0.28.7",
     "d3": "^4.10.2",
     "emoji-flags": "^1.2.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "file-loader": "^0.10.1",
+    "file-loader": "^0.11.2",
     "fs-extra": "^4.0.1",
     "gh-pages": "^1.0.0",
-    "html-loader": "^0.4.4",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.26.0",
-    "istanbul-instrumenter-loader": "^2.0.0",
+    "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.0.0",
@@ -144,14 +144,14 @@
     "rxjs": "^5.0.3",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.0",
-    "style-loader": "^0.14.1",
+    "style-loader": "^0.18.2",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "1.1.2",
     "tslint": "^5.7.0",
     "tslint-config-swimlane": "^3.0.3",
     "tslint-loader": "^3.3.0",
     "typescript": "^2.5.2",
-    "uglify-js": "^2.7.5",
+    "uglify-js": "^3.1.0",
     "url-loader": "^0.5.7",
     "web-animations-js": "^2.2.2",
     "webpack": "^3.5.6",
