--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-charts",
-  "version": "6.1.0",
+  "version": "7.0.0",
   "description": "Declarative Charting Framework for Angular2 and beyond!",
   "main": "release/index.js",
   "typings": "release/index.d.ts",
@@ -44,21 +44,21 @@
     "url": "git+https://github.com/swimlane/ngx-charts.git"
   },
   "keywords": [
-    "angular2",
+    "angular",
     "angularjs",
     "charts",
     "charting",
     "angular",
     "d3",
+    "d3.js",
+    "d3js",
     "viz",
     "graph",
     "svg",
     "dataviz",
+    "data visualization",
     "viz",
-    "graph",
-    "d3.js",
-    "d3js",
-    "angular4"
+    "graph"
   ],
   "authors": [
     "Austin McDaniel",
@@ -74,23 +74,23 @@
   },
   "homepage": "https://github.com/swimlane/ngx-charts#readme",
   "peerDependencies": {
-    "@angular/common": "^4.2.x",
-    "@angular/core": "^4.2.x",
-    "d3": "^4.9.x",
-    "rxjs": "^5.0.x"
+    "@angular/common": "5.x",
+    "@angular/core": "5.x",
+    "d3": ">= 4.9.x",
+    "rxjs": "5.x"
   },
   "devDependencies": {
-    "@angular/animations": "^4.3.6",
-    "@angular/common": "^4.3.6",
-    "@angular/compiler": "^4.3.6",
-    "@angular/compiler-cli": "^4.3.6",
-    "@angular/core": "^4.3.6",
-    "@angular/forms": "^4.3.6",
-    "@angular/http": "^4.3.6",
-    "@angular/platform-browser": "^4.3.6",
-    "@angular/platform-browser-dynamic": "^4.3.6",
-    "@angular/platform-server": "^4.3.6",
-    "@swimlane/ngx-ui": "^18.0.6",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@swimlane/ngx-ui": "^19.0.0",
     "@types/d3-array": "^1.2.1",
     "@types/d3-brush": "1.0.7",
     "@types/d3-color": "^1.0.5",
@@ -141,7 +141,7 @@
     "raw-loader": "^0.5.1",
     "replace": "^0.3.0",
     "rimraf": "^2.5.2",
-    "rxjs": "^5.0.3",
+    "rxjs": "^5.5.2",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.18.2",
@@ -150,7 +150,7 @@
     "tslint": "^5.7.0",
     "tslint-config-swimlane": "^3.0.3",
     "tslint-loader": "^3.3.0",
-    "typescript": "^2.5.2",
+    "typescript": "2.5.2",
     "uglify-js": "^3.1.0",
     "url-loader": "^0.5.7",
     "web-animations-js": "^2.2.2",
