--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
   "peerDependencies": {
     "@angular/common": "5.x",
     "@angular/core": "5.x",
+    "@angular/animations": "5.x",
+    "@angular/platform-browser": "5.x",
     "d3": ">= 4.9.x",
     "rxjs": "5.x"
   },
@@ -160,5 +162,18 @@
     "webpack-merge": "^4.1.0",
     "webpack-notifier": "^1.5.0",
     "zone.js": "^0.8.17"
+  },
+  "dependencies": {
+    "d3-array": "^1.2.1",
+    "d3-brush": "^1.0.4",
+    "d3-color": "^1.0.3",
+    "d3-force": "^1.1.0",
+    "d3-format": "^1.2.0",
+    "d3-hierarchy": "^1.1.5",
+    "d3-interpolate": "^1.1.5",
+    "d3-scale": "^1.0.6",
+    "d3-selection": "^1.1.0",
+    "d3-shape": "^1.2.0",
+    "d3-time-format": "^2.1.0"
   }
 }
