--- a/package.json
+++ b/package.json
@@ -74,23 +74,23 @@
   },
   "homepage": "https://github.com/swimlane/ngx-charts#readme",
   "peerDependencies": {
-    "@angular/common": "5.x",
-    "@angular/core": "5.x",
-    "@angular/animations": "5.x",
-    "@angular/platform-browser": "5.x",
-    "rxjs": "5.x"
+    "@angular/common": "6.x",
+    "@angular/core": "6.x",
+    "@angular/animations": "6.x",
+    "@angular/platform-browser": "6.x",
+    "rxjs": "6.x"
   },
   "devDependencies": {
-    "@angular/animations": "^5.2.5",
-    "@angular/common": "^5.2.5",
-    "@angular/compiler": "^5.2.5",
-    "@angular/compiler-cli": "^5.2.5",
-    "@angular/core": "^5.2.5",
-    "@angular/forms": "^5.2.5",
-    "@angular/http": "^5.2.5",
-    "@angular/platform-browser": "^5.2.5",
-    "@angular/platform-browser-dynamic": "^5.2.5",
-    "@angular/platform-server": "^5.2.5",
+    "@angular/animations": "^6.0.0-rc.5",
+    "@angular/common": "^6.0.0-rc.5",
+    "@angular/compiler": "^6.0.0-rc.5",
+    "@angular/compiler-cli": "^6.0.0-rc.5",
+    "@angular/core": "^6.0.0-rc.5",
+    "@angular/forms": "^6.0.0-rc.5",
+    "@angular/http": "^6.0.0-rc.5",
+    "@angular/platform-browser": "^6.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^6.0.0-rc.5",
+    "@angular/platform-server": "^6.0.0-rc.5",
     "@swimlane/ngx-ui": "^20.1.0",
     "@types/d3-array": "^1.2.1",
     "@types/d3-brush": "1.0.7",
@@ -142,7 +142,7 @@
     "raw-loader": "^0.5.1",
     "replace": "^0.3.0",
     "rimraf": "^2.5.2",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.0.0-uncanny-rc.7",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.18.2",
