--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
     "build:css": "postcss --use autoprefixer dist/*.css -d dist/",
     "copy:build": "cpx \"src/**/*\" build",
     "copy:styles": "cpx \"build/**/*.css\" release",
+    "copy:docs": "cpx \"docs/{**,.nojekyll}\" dist/docs/",
+    "copy:nojekyll": "cpx demo/.nojekyll dist/",
     "watch": "webpack --display-error-details --watch",
     "start": "webpack-dev-server",
     "start:host": "webpack-dev-server --host 0.0.0.0",
     "start:hmr": "webpack-dev-server --env.HMR",
-    "release": "npm-run-all build:release",
-    "package":
-      "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
+    "release": "npm-run-all clean:dist build:release",
+    "package": "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
     "package:ts": "tsc --outDir release",
     "package:aot": "ngc -p tsconfig-aot.json",
     "package:replace-scss": "node ./config/replace-scss.js",
-    "package:minify":
-      "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
-    "deploy": "node ./config/deploy.js",
+    "package:minify": "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
+    "predeploy": "npm-run-all release copy:docs copy:nojekyll",
+    "deploy": "angular-cli-ghpages --dir ./dist/",
     "profile": "NODE_ENV=production webpack --profile --json > dist/stats.json"
   },
   "repository": {
@@ -63,9 +64,15 @@
     "graph"
   ],
   "author": "Swimlane",
-  "contributors": ["Marjan Georgiev", "Jayson Harshbarger", "Austin McDaniel"],
+  "contributors": [
+    "Marjan Georgiev",
+    "Jayson Harshbarger",
+    "Austin McDaniel"
+  ],
   "license": "MIT",
-  "files": ["release"],
+  "files": [
+    "release"
+  ],
   "bugs": {
     "url": "https://github.com/swimlane/ngx-charts/issues"
   },
@@ -107,6 +114,7 @@
     "@types/d3-transition": "^1.1.0",
     "@types/jasmine": "^2.5.54",
     "@types/node": "^8.0.28",
+    "angular-cli-ghpages": "^0.5.2",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^7.1.4",
     "awesome-typescript-loader": "^3.2.3",
@@ -166,6 +174,8 @@
     "zone.js": "^0.8.17"
   },
   "dependencies": {
+    "cpy": "^7.0.1",
+    "cpy-cli": "^2.0.0",
     "d3-array": "^1.2.1",
     "d3-brush": "^1.0.4",
     "d3-color": "^1.0.3",
