Add release/esm.js as pkg.module and update build process

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "9.0.0",
   "description": "Declarative Charting Framework for Angular2 and beyond!",
   "main": "release/index.js",
+  "module": "release/esm.js",
   "typings": "release/index.d.ts",
   "scripts": {
     "check": "npm-check --skip-unused",
@@ -17,7 +18,7 @@
     "clean:build": "rimraf build",
     "clean:dist": "rimraf dist",
     "clean:release": "rimraf release",
-    "build": "webpack --display-error-details",
+    "build": "webpack --display-error-details && npm run build:esm",
     "build:release": "cross-env NODE_ENV=production npm run build",
     "build:package": "cross-env NODE_ENV=package npm run build",
     "build:ts": "tsc",
