--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "9.0.0",
   "description": "Declarative Charting Framework for Angular2 and beyond!",
   "main": "release/index.js",
+  "module": "release/esm.js",
   "typings": "release/index.d.ts",
   "scripts": {
     "check": "npm-check --skip-unused",
@@ -17,13 +18,14 @@
     "clean:build": "rimraf build",
     "clean:dist": "rimraf dist",
     "clean:release": "rimraf release",
-    "build": "webpack --display-error-details",
+    "build": "webpack --display-error-details && npm run build:esm",
     "build:release": "cross-env NODE_ENV=production npm run build",
     "build:package": "cross-env NODE_ENV=package npm run build",
     "build:ts": "tsc",
     "build:aot": "ngc",
     "build:sass": "node-sass -r build/ -o build/",
     "build:css": "postcss --use autoprefixer dist/*.css -d dist/",
+    "build:esm": "rollup --config config/rollup.config.js",
     "copy:build": "cpx \"src/**/*\" build",
     "copy:styles": "cpx \"build/**/*.css\" release",
     "watch": "webpack --display-error-details --watch",
@@ -75,12 +77,28 @@
   },
   "homepage": "https://github.com/swimlane/ngx-charts#readme",
   "peerDependencies": {
-    "@angular/cdk": "6.x",
-    "@angular/common": "6.x",
-    "@angular/core": "6.x",
     "@angular/animations": "6.x",
+    "@angular/cdk": "6.x",
+    "@angular/core": "6.x",
+    "@angular/common": "6.x",
+    "@angular/forms": "^6.0.0",
     "@angular/platform-browser": "6.x",
-    "rxjs": "6.x"
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "core-js": "^2.5.1",
+    "d3": "^4.10.2",
+    "d3-array": "^1.2.1",
+    "d3-brush": "^1.0.4",
+    "d3-color": "^1.0.3",
+    "d3-force": "^1.1.0",
+    "d3-format": "^1.2.0",
+    "d3-hierarchy": "^1.1.5",
+    "d3-interpolate": "^1.1.5",
+    "d3-scale": "^1.0.6",
+    "d3-selection": "^1.1.0",
+    "d3-shape": "^1.2.0",
+    "d3-time-format": "^2.1.0",
+    "rxjs": "6.x",
+    "zone.js": "^0.8.17"
   },
   "devDependencies": {
     "@angular/animations": "^6.0.0",
@@ -114,6 +132,7 @@
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^7.1.4",
     "awesome-typescript-loader": "^3.2.3",
+    "clean-css": "^4.2.1",
     "clean-webpack-plugin": "^0.1.15",
     "codelyzer": "^4.3.0",
     "copy-webpack-plugin": "^4.5.1",
@@ -122,12 +141,24 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "d3": "^4.10.2",
+    "d3-array": "^1.2.1",
+    "d3-brush": "^1.0.4",
+    "d3-color": "^1.0.3",
+    "d3-force": "^1.1.0",
+    "d3-format": "^1.2.0",
+    "d3-hierarchy": "^1.1.5",
+    "d3-interpolate": "^1.1.5",
+    "d3-scale": "^1.0.6",
+    "d3-selection": "^1.1.0",
+    "d3-shape": "^1.2.0",
+    "d3-time-format": "^2.1.0",
     "emoji-flags": "^1.2.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.11.2",
     "fs-extra": "^4.0.1",
     "gh-pages": "^1.0.0",
     "html-loader": "^0.5.1",
+    "html-minifier": "^3.5.20",
     "html-webpack-plugin": "^2.26.0",
     "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "^2.8.0",
@@ -139,7 +170,7 @@
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
-    "node-sass": "^4.3.0",
+    "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.1",
     "postcss": "^5.2.11",
     "postcss-loader": "^1.2.2",
@@ -147,6 +178,11 @@
     "raw-loader": "^0.5.1",
     "replace": "^1.0.0",
     "rimraf": "^2.5.2",
+    "rollup": "^0.66.6",
+    "rollup-plugin-angular": "^0.5.3",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-typescript": "^1.0.0",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "sass-loader": "^6.0.3",
@@ -169,17 +205,5 @@
     "webpack-notifier": "^1.5.0",
     "zone.js": "^0.8.17"
   },
-  "dependencies": {
-    "d3-array": "^1.2.1",
-    "d3-brush": "^1.0.4",
-    "d3-color": "^1.0.3",
-    "d3-force": "^1.1.0",
-    "d3-format": "^1.2.0",
-    "d3-hierarchy": "^1.1.5",
-    "d3-interpolate": "^1.1.5",
-    "d3-scale": "^1.0.6",
-    "d3-selection": "^1.1.0",
-    "d3-shape": "^1.2.0",
-    "d3-time-format": "^2.1.0"
-  }
+  "dependencies": {}
 }
