--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
   "contributors": [
     "Marjan Georgiev",
     "Jayson Harshbarger",
-    "Austin McDaniel"
+    "Austin McDaniel",
+    "Hendrik Scholz"
   ],
   "license": "MIT",
   "files": [
