--- a/package.json
+++ b/package.json
@@ -183,14 +183,16 @@
     "zone.js": "^0.9.1"
   },
   "dependencies": {
+    "@types/d3-ease": "^1.0.8",
     "d3": "^4.10.2",
     "d3-array": "^1.2.1",
     "d3-brush": "^1.0.4",
     "d3-color": "^1.0.3",
+    "d3-ease": "^1.0.5",
     "d3-force": "^1.1.0",
     "d3-format": "^1.2.0",
     "d3-hierarchy": "^1.1.5",
-    "d3-interpolate": "^1.1.5",
+    "d3-interpolate": "^1.3.2",
     "d3-scale": "^1.0.6",
     "d3-selection": "^1.1.0",
     "d3-shape": "^1.2.0",
