--- a/projects/ngx-charts-cli/package.json
+++ b/projects/ngx-charts-cli/package.json
@@ -39,13 +39,13 @@
   },
   "homepage": "https://github.com/swimlane/ngx-charts#readme",
   "peerDependencies": {
-    "@angular/animations": "7.x || 8.x",
-    "@angular/cdk": "7.x || 8.x",
-    "@angular/core": "7.x || 8.x",
-    "@angular/common": "7.x || 8.x",
-    "@angular/forms": "7.x || 8.x",
-    "@angular/platform-browser": "7.x || 8.x",
-    "@angular/platform-browser-dynamic": "7.x || 8.x",
+    "@angular/animations": "7.x || 8.x || 9.x",
+    "@angular/cdk": "7.x || 8.x || 9.x",
+    "@angular/core": "7.x || 8.x || 9.x",
+    "@angular/common": "7.x || 8.x || 9.x",
+    "@angular/forms": "7.x || 8.x || 9.x",
+    "@angular/platform-browser": "7.x || 8.x || 9.x",
+    "@angular/platform-browser-dynamic": "7.x || 8.x || 9.x",
     "rxjs": "6.x"
   },
   "dependencies": {
