--- a/projects/ngx-charts-cli/package.json
+++ b/projects/ngx-charts-cli/package.json
@@ -60,6 +60,7 @@
     "d3-scale": "^1.0.6",
     "d3-selection": "^1.1.0",
     "d3-shape": "^1.2.0",
-    "d3-time-format": "^2.1.0"
+    "d3-time-format": "^2.1.0",
+    "d3-transition": "^1.3.2"
   }
 }
