--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ language: node_js
 node_js:
   - 'node'
 
+services:
+  - xvfb
+
 before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
 
 install:
   - travis_wait 30 npm install
