--- a/package.json
+++ b/package.json
@@ -194,6 +194,6 @@
     "d3-scale": "^1.0.6",
     "d3-selection": "^1.1.0",
     "d3-shape": "^1.2.0",
-    "d3-time-format": "^2.1.0"
+    "d3-time-format": "2.1.3"
   }
 }
