--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 
 node_js:
   - 'node'
-  
+
 addons:
   chrome: stable
 
@@ -10,12 +10,9 @@ services:
   - xvfb
 
 install:
-  - travis_wait 30 npm install
-  - npm install codeclimate-test-reporter
+  - npm ci
 
-after_script:
-  - codeclimate-test-reporter < coverage/lcov.info
-
-addons:
-  code_climate:
-    repo_token: f45df226a75d3a1995f101fe89920334b4114ce4f2aa1256dcbb3a36884b6040
+script:
+  - npm run build:lib
+  - npm run build
+  - npm run test:ci
