--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npm run build:lib && ng build --prod",
     "build:lib": "ng build @swimlane/ngx-charts",
     "package": "npm run build:lib",
-    "test": "ng test",
+    "test": "ng test @swimlane/ngx-charts",
+    "test:ci": "ng test @swimlane/ngx-ui --watch=false --progress=false --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prepublish": "npm run package",
