--- a/projects/swimlane/ngx-charts/package.json
+++ b/projects/swimlane/ngx-charts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@swimlane/ngx-charts",
-  "version": "13.0.2",
+  "name": "@okendo/ngx-charts",
+  "version": "13.0.6",
   "description": "Declarative Charting Framework for Angular",
   "repository": {
     "type": "git",
