--- a/projects/swimlane/ngx-charts/package.json
+++ b/projects/swimlane/ngx-charts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@swimlane/ngx-charts",
+  "name": "@activia/swimlane-ngx-charts",
   "version": "13.0.2",
   "description": "Declarative Charting Framework for Angular",
   "repository": {
