fix angular version and ivy

--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "registry": "https://nexus.activia.io:8443/repository/npm-internal"
   },
   "dependencies": {
-    "@angular/animations": "~9.0.0-rc.6",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~9.0.0-rc.6",
-    "@angular/compiler": "~9.0.0-rc.6",
-    "@angular/core": "~9.0.0-rc.6",
-    "@angular/forms": "~9.0.0-rc.6",
-    "@angular/platform-browser": "~9.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.6",
-    "@angular/router": "~9.0.0-rc.6",
+    "@angular/animations": "9.0.1",
+    "@angular/cdk": "9.0.0",
+    "@angular/common": "9.0.1",
+    "@angular/compiler": "9.0.1",
+    "@angular/core": "9.0.1",
+    "@angular/forms": "9.0.1",
+    "@angular/platform-browser": "9.0.1",
+    "@angular/platform-browser-dynamic": "9.0.1",
+    "@angular/router": "9.0.1",
     "@swimlane/ngx-ui": "^28.0.0-rc.3",
     "codemirror": "^5.49.2",
     "d3-array": "^2.4.0",
@@ -57,11 +57,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.5",
-    "@angular-devkit/build-ng-packagr": "~0.900.0-rc.5",
-    "@angular/cli": "^9.0.0-rc.6",
-    "@angular/compiler-cli": "~9.0.0-rc.6",
-    "@angular/language-service": "~9.0.0-rc.6",
+    "@angular-devkit/build-angular": "0.900.2",
+    "@angular-devkit/build-ng-packagr": "0.900.2",
+    "@angular/cli": "9.0.2",
+    "@angular/compiler-cli": "9.0.1",
+    "@angular/language-service": "9.0.1",
     "@swimlane/prettier-config-swimlane": "^2.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
