Add postinstall script

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prepack": "npm run package",
     "pack": "npm pack ./dist/swimlane/ngx-charts",
     "prettier": "prettier --write \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
-    "prettier:ci": "prettier --check \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\""
+    "prettier:ci": "prettier --check \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
+    "postinstall": "ngcc"
   },
   "dependencies": {
     "@angular/animations": "~10.0.6",
