--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "build:lib": "ng build @swimlane/ngx-charts",
-    "build:lib:prod": "ng build @swimlane/ngx-charts --prod",
-    "build:demo": "npm run build:lib:prod && cross-env NODE_ENV=production ng build --prod --base-href=\"/ngx-charts/\"",
+    "build:lib:prod": "ng build @swimlane/ngx-charts --configuration production",
+    "build:demo": "npm run build:lib:prod && cross-env NODE_ENV=production ng build --configuration production --base-href=\"/ngx-charts/\"",
     "copy-files": "cp README.md dist/swimlane/ngx-charts/README.md && cp LICENSE dist/swimlane/ngx-charts/LICENSE",
     "ci": "run-s lint prettier:ci test:ci",
     "test": "run-p lint prettier:ci test:unit",
@@ -28,17 +28,17 @@
     "postinstall": "ngcc"
   },
   "dependencies": {
-    "@angular/animations": "~11.0.5",
-    "@angular/cdk": "^11.0.3",
-    "@angular/common": "~11.0.5",
-    "@angular/compiler": "~11.0.5",
-    "@angular/core": "~11.0.5",
-    "@angular/flex-layout": "11.0.0-beta.33",
-    "@angular/forms": "~11.0.5",
-    "@angular/platform-browser": "~11.0.5",
-    "@angular/platform-browser-dynamic": "~11.0.5",
-    "@angular/router": "~11.0.5",
-    "@swimlane/ngx-ui": "^34.0.0",
+    "@angular/animations": "~12.1.0",
+    "@angular/cdk": "^12.1.0",
+    "@angular/common": "~12.1.0",
+    "@angular/compiler": "~12.1.0",
+    "@angular/core": "~12.1.0",
+    "@angular/flex-layout": "12.0.0-beta.34",
+    "@angular/forms": "~12.1.0",
+    "@angular/platform-browser": "~12.1.0",
+    "@angular/platform-browser-dynamic": "~12.1.0",
+    "@angular/router": "~12.1.0",
+    "@swimlane/ngx-ui": "^35.6.5",
     "codemirror": "^5.49.2",
     "d3-array": "^2.9.1",
     "d3-brush": "^2.1.0",
@@ -53,18 +53,19 @@
     "d3-transition": "^2.0.0",
     "emoji-flags": "^1.2.0",
     "moment-timezone": "^0.5.28",
+    "ng-in-viewport": "^6.1.5",
     "ngx-moment": "^5.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.5",
+    "@angular-devkit/build-angular": "~12.1.0",
     "@angular-devkit/build-ng-packagr": "~0.1002.0",
-    "@angular/cli": "^11.0.5",
-    "@angular/compiler-cli": "~11.0.5",
-    "@angular/language-service": "~11.0.5",
+    "@angular/cli": "^12.1.0",
+    "@angular/compiler-cli": "~12.1.0",
+    "@angular/language-service": "~12.1.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/d3-shape": "^2.0.0",
     "@types/jasmine": "^3.6.0",
@@ -76,12 +77,12 @@
     "cross-env": "^7.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.0.0",
+    "ng-packagr": "^12.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
@@ -90,6 +91,6 @@
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-security": "^1.16.0",
     "tslint-config-swimlane": "^5.0.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.3.4"
   }
 }
