--- a/projects/swimlane/ngx-charts/package.json
+++ b/projects/swimlane/ngx-charts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@swimlane/ngx-charts",
+  "name": "@webdave/ngx-charts",
   "version": "16.0.0",
   "description": "Declarative Charting Framework for Angular",
   "repository": {
