make it work (use string)

--- a/angular.json
+++ b/angular.json
@@ -108,7 +108,7 @@
         }
       }
     },
-    "@swimlane/ngx-charts": {
+    "webdave-ngx-charts": {
       "projectType": "library",
       "root": "projects/swimlane/ngx-charts",
       "sourceRoot": "projects/swimlane/ngx-charts/src",
