--- a/projects/swimlane/ngx-charts/tsconfig.lib.json
+++ b/projects/swimlane/ngx-charts/tsconfig.lib.json
@@ -14,7 +14,7 @@
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
     "enableResourceInlining": true,
-    "enableIvy": true
+    "enableIvy": false
   },
   "exclude": ["src/test.ts", "**/*.spec.ts"]
 }
