--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,15 +8,24 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "module": "es2020",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"],
+    "target": "es2017",
+    "module": "es2020",
+    "lib": [
+      "es2020",
+      "dom"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "paths": {
-      "@swimlane/ngx-charts": ["projects/swimlane/ngx-charts/src/public_api"],
-      "@swimlane/ngx-charts/*": ["projects/swimlane/ngx-charts/src/lib/*"]
+      "@swimlane/ngx-charts": [
+        "projects/swimlane/ngx-charts/src/public_api"
+      ],
+      "@swimlane/ngx-charts/*": [
+        "projects/swimlane/ngx-charts/src/lib/*"
+      ]
     },
     "resolveJsonModule": true
   },
