--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "d3-time-format": "^3.0.0",
     "d3-transition": "^3.0.1",
     "emoji-flags": "^1.2.0",
+    "leaflet": "^1.9.4",
     "moment-timezone": "^0.5.40",
     "ng-in-viewport": "^6.1.5",
     "ngx-moment": "^5.0.0",
@@ -87,6 +88,7 @@
     "@types/jasmine": "^3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/json-schema": "^7.0.4",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
