angular.json: use ng-packagr (and not build-ng-packagr) for lib

--- a/projects/swimlane/ngx-charts/tsconfig.spec.json
+++ b/projects/swimlane/ngx-charts/tsconfig.spec.json
@@ -2,7 +2,7 @@
   "extends": "../../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../out-tsc/spec",
-    "types": ["jasmine", "node"]
+    "types": ["jasmine"]
   },
   "files": ["src/test.ts"],
   "include": ["**/*.spec.ts", "**/*.d.ts"]
