angular.json: use zone.js in section polyfills (and delete src/polyfills.ts) for angular 15 tsconfig.json: use ES2022 for target/module/lib for angular 15

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,7 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "files": ["src/main.ts", "src/polyfills.ts", "src/declarations.d.ts"],
+  "files": ["src/main.ts"],
   "include": ["src/**/*.d.ts"],
   "exclude": ["src/test.ts", "src/**/*.spec.ts"],
   "angularCompilerOptions": {
