added unit for total and total label for pie chart

--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "ngx-charts",
+  "name": "ngx-charts-extended",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:lib": "ng build @swimlane/ngx-charts",
-    "build:lib:prod": "ng build @swimlane/ngx-charts --configuration production",
-    "build:demo": "npm run build:lib:prod && cross-env NODE_ENV=production ng build --configuration production --base-href=\"/ngx-charts/\"",
-    "copy-files": "cp README.md dist/swimlane/ngx-charts/README.md && cp LICENSE dist/swimlane/ngx-charts/LICENSE",
+    "build:lib": "ng build @swimlane/ngx-charts-extended",
+    "build:lib:prod": "ng build @swimlane/ngx-charts-extended --configuration production",
+    "build:demo": "npm run build:lib:prod && cross-env NODE_ENV=production ng build --configuration production --base-href=\"/ngx-charts-extended/\"",
+    "copy-files": "cp README.md dist/swimlane/ngx-charts-extended/README.md && cp LICENSE dist/swimlane/ngx-charts-extended/LICENSE",
     "ci": "run-s lint prettier:ci test:ci",
     "test": "run-s lint prettier:ci test:unit",
-    "test:unit": "ng test @swimlane/ngx-charts --watch=false",
-    "test:watch": "ng test @swimlane/ngx-charts",
-    "test:ci": "ng test @swimlane/ngx-charts --watch=false --progress=false --browsers=ChromeHeadlessCI",
+    "test:unit": "ng test @swimlane/ngx-charts-extended --watch=false",
+    "test:watch": "ng test @swimlane/ngx-charts-extended",
+    "test:ci": "ng test @swimlane/ngx-charts-extended --watch=false --progress=false --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "predeploy": "npm run build:demo",
-    "deploy": "angular-cli-ghpages --dir ./dist/ngx-charts --name=Swimlane --email=developer@swimlane.com",
+    "deploy": "angular-cli-ghpages --dir ./dist/ngx-charts-extended --name=Swimlane --email=developer@swimlane.com",
     "package": "run-s build:lib:prod copy-files",
     "prepublish:lib": "npm run package",
-    "publish:lib": "npm publish ./dist/swimlane/ngx-charts",
+    "publish:lib": "npm publish ./dist/swimlane/ngx-charts-extended",
     "prepack": "npm run package",
-    "pack": "npm pack ./dist/swimlane/ngx-charts",
+    "pack": "npm pack ./dist/swimlane/ngx-charts-extended",
     "prettier": "prettier --write \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
     "prettier:ci": "prettier --check \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
     "postinstall": "ngcc",
