angular 17: run: npx ng update @angular/cli @angular/cdk  @angular/core  @angular-eslint/schematics --force

--- a/angular.json
+++ b/angular.json
@@ -82,18 +82,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngx-charts:build"
+            "buildTarget": "ngx-charts:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-charts:build:production"
+              "buildTarget": "ngx-charts:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngx-charts:build"
+            "buildTarget": "ngx-charts:build"
           }
         },
         "test": {
