angular 18: run: npx ng update @angular/cli @angular/cdk  @angular/core @angular-eslint/schematics --force package.json: change builder to @angular-devkit/build-angular:application package.json: for outputPath, add browser to "" (to have the same structure in dist else add a sub-directory browser)

--- a/angular.json
+++ b/angular.json
@@ -18,11 +18,14 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/ngx-charts",
+            "outputPath": {
+              "base": "dist/ngx-charts",
+              "browser": ""
+            },
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -42,9 +45,7 @@
               "mousetrap",
               "moment-timezone"
             ],
-            "vendorChunk": true,
             "extractLicenses": false,
-            "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
             "namedChunks": true
@@ -62,8 +63,6 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
