--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,8 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "downlevelIteration": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
     "module": "ES2022",
     "moduleResolution": "node",
     "importHelpers": true,
