--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "fix:lint": "ng lint --fix"
   },
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/cdk": "^13.1.0",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/flex-layout": "13.0.0-beta.36",
-    "@angular/forms": "~13.1.0",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
-    "@swimlane/ngx-ui": "^35.6.5",
+    "@angular/animations": "~18.1.0",
+    "@angular/cdk": "~18.1.0",
+    "@angular/common": "~18.1.0",
+    "@angular/compiler": "~18.1.0",
+    "@angular/core": "~18.1.0",
+    "@angular/flex-layout": "15.0.0-beta.42",
+    "@angular/forms": "~18.1.0",
+    "@angular/platform-browser": "~18.1.0",
+    "@angular/platform-browser-dynamic": "~18.1.0",
+    "@angular/router": "~18.1.0",
+    "@swimlane/ngx-ui": "48.0.5",
     "codemirror": "^5.49.2",
     "d3-array": "^3.1.1",
     "d3-brush": "^3.0.0",
@@ -61,21 +61,24 @@
     "ng-in-viewport": "^6.1.5",
     "ngx-moment": "^5.0.0",
     "resize-observer-polyfill": "^1.5.1",
-    "rxjs": "^6.5.3 || ^7.4.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "^7.8.1",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.1",
-    "@angular-devkit/build-ng-packagr": "~0.1002.0",
-    "@angular-eslint/builder": "13.1.0",
-    "@angular-eslint/eslint-plugin": "13.1.0",
-    "@angular-eslint/eslint-plugin-template": "13.1.0",
-    "@angular-eslint/schematics": "13.1.0",
-    "@angular-eslint/template-parser": "13.1.0",
-    "@angular/cli": "^13.1.1",
-    "@angular/compiler-cli": "~13.1.0",
-    "@angular/language-service": "~13.1.0",
+    "@angular-devkit/architect": "^0.1802.11",
+    "@angular-devkit/build-angular": "~18.1.0",
+    "@angular-devkit/build-ng-packagr": "0.1002.0",
+    "@angular-devkit/core": "~18.1.0",
+    "@angular-devkit/schematics": "~18.1.0",
+    "@angular-eslint/builder": "~18.1.0",
+    "@angular-eslint/eslint-plugin": "^18.4.0",
+    "@angular-eslint/eslint-plugin-template": "^18.4.0",
+    "@angular-eslint/schematics": "~18.1.0",
+    "@angular-eslint/template-parser": "^18.4.0",
+    "@angular/cli": "~18.1.0",
+    "@angular/compiler-cli": "~18.1.0",
+    "@angular/language-service": "~18.1.0",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/d3-array": "^2.12.1",
@@ -89,30 +92,30 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/json-schema": "^7.0.4",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.11.0",
-    "@typescript-eslint/parser": "5.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.1",
+    "@typescript-eslint/parser": "^8.0.0",
     "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^6.0.0",
     "cross-env": "^7.0.2",
-    "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-security": "^1.4.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": ">=3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.16",
+    "karma": "~6.3.14",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^13.1.1",
+    "ng-packagr": "~18.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "ts-node": "^8.8.2",
-    "tslint": "~6.1.0",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-config-security": "^1.16.0",
-    "tslint-config-swimlane": "^5.0.0",
-    "typescript": "~4.5.3"
-  }
+    "typescript": "~5.5.2"
+  },
+  "volta": {
+    "node": "20.17.0",
+    "yarn": "4.5.1"
+  },
+  "packageManager": "yarn@4.5.1"
 }
