--- a/projects/swimlane/ngx-charts/package.json
+++ b/projects/swimlane/ngx-charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-charts",
-  "version": "20.5.0",
+  "version": "21.0.0-beta.0",
   "description": "Declarative Charting Framework for Angular",
   "repository": {
     "type": "git",
@@ -30,14 +30,14 @@
   },
   "homepage": "https://github.com/swimlane/ngx-charts#readme",
   "peerDependencies": {
-    "@angular/animations": ">=12.0.0",
-    "@angular/cdk": ">=12.0.0",
-    "@angular/core": ">=12.0.0",
-    "@angular/common": ">=12.0.0",
-    "@angular/forms": ">=12.0.0",
-    "@angular/platform-browser": ">=12.0.0",
-    "@angular/platform-browser-dynamic": ">=12.0.0",
-    "rxjs": "^6.5.3 || ^7.4.0"
+    "@angular/animations": "15.x || 16.x || 17.x || 18.x",
+    "@angular/cdk": "15.x || 16.x || 17.x || 18.x",
+    "@angular/core": "15.x || 16.x || 17.x || 18.x",
+    "@angular/common": "15.x || 16.x || 17.x || 18.x",
+    "@angular/forms": "15.x || 16.x || 17.x || 18.x",
+    "@angular/platform-browser": "15.x || 16.x || 17.x || 18.x",
+    "@angular/platform-browser-dynamic": "15.x || 16.x || 17.x || 18.x",
+    "rxjs": "7.x"
   },
   "dependencies": {
     "d3-array": "^3.1.1",
@@ -53,8 +53,7 @@
     "d3-shape": "^3.2.0",
     "d3-time-format": "^3.0.0",
     "d3-transition": "^3.0.1",
-    "rfdc": "^1.3.0",
-    "tslib": "^2.0.0"
+    "rfdc": "^1.3.0"
   },
   "devDependencies": {
     "@types/d3-shape": "^2.0.0"
