--- a/package.json
+++ b/package.json
@@ -25,36 +25,36 @@
     "pack": "npm pack ./dist/swimlane/ngx-charts",
     "prettier": "prettier --write \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
     "prettier:ci": "prettier --check \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
-    "postinstall": "ngcc",
     "fix": "run-s lint fix:*",
     "fix:prettier": "prettier --write \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
     "fix:lint": "ng lint --fix"
   },
   "dependencies": {
-    "@angular/animations": "~18.1.0",
-    "@angular/cdk": "~18.1.0",
-    "@angular/common": "~18.1.0",
-    "@angular/compiler": "~18.1.0",
-    "@angular/core": "~18.1.0",
+    "@angular/animations": "~18.2.0",
+    "@angular/cdk": "~18.2.0",
+    "@angular/common": "~18.2.0",
+    "@angular/compiler": "~18.2.0",
+    "@angular/core": "~18.2.0",
     "@angular/flex-layout": "15.0.0-beta.42",
-    "@angular/forms": "~18.1.0",
-    "@angular/platform-browser": "~18.1.0",
-    "@angular/platform-browser-dynamic": "~18.1.0",
-    "@angular/router": "~18.1.0",
-    "@swimlane/ngx-ui": "48.0.5",
-    "codemirror": "^5.49.2",
-    "d3-array": "^3.1.1",
+    "@angular/forms": "~18.2.0",
+    "@angular/platform-browser": "~18.2.0",
+    "@angular/platform-browser-dynamic": "~18.2.0",
+    "@angular/router": "~18.2.0",
+    "@swimlane/ngx-ui": "^48.0.5",
+    "ajv": "8.12.0",
+    "codemirror": "^5.65.0",
+    "d3-array": "^3.2.0",
     "d3-brush": "^3.0.0",
     "d3-color": "^3.1.0",
     "d3-ease": "^3.0.1",
     "d3-format": "^3.1.0",
-    "d3-hierarchy": "^3.1.0",
+    "d3-hierarchy": "^3.1.2",
     "d3-interpolate": "^3.0.1",
     "d3-sankey": "^0.12.3",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
-    "d3-time-format": "^3.0.0",
+    "d3-time-format": "^4.1.0",
     "d3-transition": "^3.0.1",
     "emoji-flags": "^1.2.0",
     "moment-timezone": "^0.5.40",
@@ -67,51 +67,52 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1802.11",
-    "@angular-devkit/build-angular": "~18.1.0",
+    "@angular-devkit/build-angular": "~18.2.0",
     "@angular-devkit/build-ng-packagr": "0.1002.0",
-    "@angular-devkit/core": "~18.1.0",
-    "@angular-devkit/schematics": "~18.1.0",
-    "@angular-eslint/builder": "~18.1.0",
+    "@angular-devkit/core": "~18.2.0",
+    "@angular-devkit/schematics": "~18.2.0",
+    "@angular-eslint/builder": "~18.2.0",
     "@angular-eslint/eslint-plugin": "^18.4.0",
     "@angular-eslint/eslint-plugin-template": "^18.4.0",
-    "@angular-eslint/schematics": "~18.1.0",
+    "@angular-eslint/schematics": "~18.2.0",
     "@angular-eslint/template-parser": "^18.4.0",
-    "@angular/cli": "~18.1.0",
-    "@angular/compiler-cli": "~18.1.0",
-    "@angular/language-service": "~18.1.0",
+    "@angular/cli": "~18.2.0",
+    "@angular/compiler-cli": "~18.2.0",
+    "@angular/language-service": "~18.2.0",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
-    "@types/d3-array": "^2.12.1",
-    "@types/d3-ease": "^2.0.0",
-    "@types/d3-interpolate": "^2.0.0",
-    "@types/d3-scale": "^3.3.0",
-    "@types/d3-selection": "^2.0.0",
-    "@types/d3-shape": "^2.1.0",
-    "@types/d3-transition": "^2.0.0",
-    "@types/jasmine": "^3.6.0",
+    "@types/d3-array": "^3.0.3",
+    "@types/d3-ease": "^3.0.0",
+    "@types/d3-interpolate": "^3.0.1",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-selection": "^3.0.3",
+    "@types/d3-shape": "^3.1.0",
+    "@types/d3-transition": "^3.0.2",
+    "@types/jasmine": "^4.0.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/json-schema": "^7.0.4",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "^8.12.1",
-    "@typescript-eslint/parser": "^8.0.0",
-    "angular-cli-ghpages": "^0.6.2",
+    "@types/json-schema": "^7.0.11",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "angular-cli-ghpages": "^1.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-security": "^1.4.0",
-    "jasmine-core": ">=3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.14",
+    "eslint-plugin-security": "^1.5.0",
+    "jasmine-core": "~4.2.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "~18.1.0",
+    "ng-packagr": "~18.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
-    "ts-node": "^8.8.2",
-    "typescript": "~5.5.2"
+    "ts-node": "^10.9.1",
+    "typescript": "~5.5.2",
+    "webpack": "5"
   },
   "volta": {
     "node": "20.17.0",
