--- a/package.json
+++ b/package.json
@@ -90,8 +90,9 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/json-schema": "^7.0.11",
     "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "@typescript-eslint/utils": "^8.14.0",
     "angular-cli-ghpages": "^1.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^8.57.0",
